<resources>
    <string name="menu_concurso">GIVEAWAY 🎁</string>
    <string name="texto_puntuaciones_concurso">NBA JERSEY GIVEAWAY 🎁</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won´t take more than a minute. Thanks for your support </string>
    <string name="rate_dialog_ok">Rate it now</string>
    <string name="rate_dialog_cancel">Remind me later</string>
    <string name="rate_dialog_no">No, thanks</string>
    <string name="home_item">Home</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_contact_with_us">Contact us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account">My Profile</string>
    <string name="nav_sonido">Sound</string>
    <string name="nav_cuenta">Account</string>
    <string name="nav_help">Help</string>
    <string name="nav_home">Home</string>
    <string name="nav_login">Login</string>
    <string name="nav_register">Sign in</string>
    <string name="nav_logout">Logout</string>
    <string name="config_updated">CONFIG UPDATED</string>
    <string name="press_back">Press back again to exit</string>
    <string name="sin_conexion">Check your internet connection and try again</string>
    <string name="login_correcto">Welcome again </string>
    <string name="login_incorrecto">Log in error</string>
    <string name="registro_correcto">Sign Up Succesful</string>
    <string name="about_us">If you have any questions, suggestions, or would like to report an error, do not hesitate to email us on:\nnbastatsquiz@gmail.com</string>
    <string name="help_paragraph">In the main menu you can choose the game parameters you want among:</string>
    <string name="help_league">1 - League: NBA / WNBA / GLEAGUE</string>
    <string name="help_season">2 - Season</string>
    <string name="help_season_type">3 - Regular Season / Playoffs</string>
    <string name="help_stat">4 - Stat Category</string>
    <string name="help_stat_type">5 - Per Game / Totals</string>
    <string name="help_paragraph2">Once the game is started, you have to click on the player who had a better stat in the selected season. The stat and season are indicated on the top of the screen.</string>
    <string name="help_paragraph3">You have three lives, if you click on the wrong player, you\'ll lose a live. If you make ten hits in a row, you will get a new live up to three</string>
    <string name="help_modes">NBA Stats Quiz allows you to play two diferent modes, Stats and Draft:</string>
    <string name="help_draftMode">You have to click on the player who was selected first (Nº1 Pick is the highest).\nAlso you can filter by Team or College.</string>
    <string name="help_draftModeTitle">Draft Mode:</string>
    <string name="help_statsModeTitle">Stats Mode:</string>
    <string name="help_forMoreInfo">For more information please visit the following links:</string>
    <string name="glossary_paragraph">On the top of the game screen you will find the abbreviated stat category asked. \nThe abbreviations are the following:</string>
    <string name="aboutUs_paragraph">All the statistics, names and images are retrieved from stats.nba.com</string>
    <string name="sound">Sound</string>
    <string name="no_data_found">No players founds with this params</string>
    <string name="user_registred">user registred</string>
    <string name="already_registred">email already registred</string>
    <string name="invalid_email">invalid email</string>
    <string name="passwords_not_match">passwords not match</string>
    <string name="password_characters">password must have six characters at least</string>
    <string name="error_ocurred">error</string>
    <string name="app_name">NBA STATS QUIZ</string>
    <string name="btnComenzar">START GAME</string>
    <string name="btnRecords">🏆 BEST SCORES 🏆</string>
    <string name="options">OPTIONS</string>
    <string name="goToRegister">Not a member yet? Sign Up Now!</string>
    <string name="goToLogin">Already a member? Log In Now!</string>
    <string name="reset_filters">Reset filters</string>
    <string name="tab_reglas">GAME RULES</string>
    <string name="tab_glosario">GLOSSARY</string>
    <string name="tab_aboutUs">ABOUT US</string>
    <string name="introduce_user_name">Type your username here</string>
    <string name="introduce_email">Type your email here</string>
    <string name="introduce_passwd">Type your password here</string>
    <string name="introduce_passwd2">Confirm your password here</string>
    <string name="empezar_partida">Start Game</string>
    <string name="registrarse">Sign Up</string>
    <string name="sugerencia_registro">You need to be signed in to save your game records ☹️</string>
    <string name="seleccionar_avatar">Choose your avatar</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="back_to_menu">BACK TO MENU</string>
    <string name="game_finished">Game finished</string>
    <string name="new_record">New Record!</string>
    <string name="record">Record: </string>
    <string name="puntuacion">Points: </string>
    <string name="actualizar">UPDATE</string>
    <string name="codigo">ENTER YOUR CODE</string>
    <string name="temporizador_off">TIMER OFF</string>
    <string name="aviso_temporizador">If timer is off your game record won\'t be saved</string>
    <string name="MISC">MIX</string>
    <string name="ALL_TIME">ALL TIME - CAREER</string>
    <string name="PerGame">Per game</string>
    <string name="Totals">Totals</string>
    <string name="PTS">POINTS</string>
    <string name="REB">REBOUNDS</string>
    <string name="AST">ASISTS</string>
    <string name="OREB">OFENSIVE REBOUNDS</string>
    <string name="OREB_RES">OFENSIVE REB</string>
    <string name="DREB">DEFENSIVE REB</string>
    <string name="DREB_RES">DEFENSIVE REB</string>
    <string name="STL">STEALS</string>
    <string name="BLK">BLOCKS</string>
    <string name="TOV">TURNOVERS</string>
    <string name="MIN">MINS</string>
    <string name="FG3_PCT">3POINT PERCENTAGE</string>
    <string name="FG3_PCT_RES">3POINT %</string>
    <string name="FG3M">3POINT MADE</string>
    <string name="FG3M_RES">3POINT MADE</string>
    <string name="FT_PCT">FREE THROW PERCENTAGE</string>
    <string name="FT_PCT_RES">FT PERCENTAGE</string>
    <string name="FTM">FREE THROW MADE</string>
    <string name="FTM_RES">FT MADE</string>
    <string-array name="NBA_Teams">

        <item>@string/MISC</item>
        <item>Atlanta Hawks</item>
        <item>Boston Celtics</item>
        <item>Brooklyn Nets</item>
        <item>Charlotte Hornets</item>
        <item>Chicago Bulls</item>
        <item>Cleveland Cavaliers</item>
        <item>Dallas Mavericks</item>
        <item>Denver Nuggets</item>
        <item>Detroit Pistons</item>
        <item>Golden State Warriors</item>
        <item>Houston Rockets</item>
        <item>Indiana Pacers</item>
        <item>LA Clippers</item>
        <item>Los Angeles Lakers</item>
        <item>Memphis Grizzlies</item>
        <item>Miami Heat</item>
        <item>Milwaukee Bucks</item>
        <item>Minnesota Timberwolves</item>
        <item>New Orleans Pelicans</item>
        <item>New York Knicks</item>
        <item>Oklahoma City Thunder</item>
        <item>Orlando Magic</item>
        <item>Philadelphia 76ers</item>
        <item>Phoenix Suns</item>
        <item>Portland Trail Blazers</item>
        <item>Sacramento Kings</item>
        <item>San Antonio Spurs</item>

        <item>Utah Jazz</item>
        <item>Washington Wizards</item>
    </string-array>
    <string-array name="Colleges">

        <item>@string/MISC</item>
        <item>FC Barcelona Basquet (Spain)</item>
        <item>Real Madrid Baloncesto (Spain)</item>
        <item>Arizona</item>
        <item>Duke</item>
        <item>Michigan State</item>
        <item>Oklahoma</item>
        <item>Texas</item>
        <item>West Virginia</item>
        <item>Alabama</item>
        <item>Kentucky</item>
        <item>Villanova</item>
        <item>Boston College</item>
        <item>Missouri</item>
        <item>Oregon</item>
        <item>Texas Tech</item>
        <item>Miami (FL)</item>
        <item>Maryland</item>
        <item>Georgia Tech</item>

    </string-array>
    <string-array name="TemporadasWNBA">

        <item>@string/MISC</item>
        <item>All Time</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>

    </string-array>
    <string-array name="DraftYears">

        <item>@string/MISC</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>

    </string-array>
    <string-array name="TemporadasConcurso">

        <item>2019-20</item>
        <item>2018-19</item>
        <item>2017-18</item>
        <item>2016-17</item>
        <item>2015-16</item>
        <item>2014-15</item>
        <item>2013-14</item>
        <item>2012-13</item>
        <item>2011-12</item>
        <item>2010-11</item>
        <item>2009-10</item>
        <item>2008-09</item>
        <item>2007-08</item>
        <item>2006-07</item>
        <item>2005-06</item>
        <item>2004-05</item>
        <item>2003-04</item>
        <item>2002-03</item>
        <item>2001-02</item>
        <item>2000-01</item>
        <item>1999-00</item>


    </string-array>
    <string-array name="Temporadas10">

        <item>2020-21</item>
        <item>2019-20</item>
        <item>2018-19</item>
        <item>2017-18</item>
        <item>2016-17</item>
        <item>2015-16</item>
        <item>2014-15</item>
        <item>2013-14</item>
        <item>2012-13</item>
        <item>2011-12</item>
        <item>2010-11</item>

    </string-array>
    <string-array name="Temporadas00">

        <item>2009-10</item>
        <item>2008-09</item>
        <item>2007-08</item>
        <item>2006-07</item>
        <item>2005-06</item>
        <item>2004-05</item>
        <item>2003-04</item>
        <item>2002-03</item>
        <item>2001-02</item>
        <item>2000-01</item>

    </string-array>
    <string name="name">Name</string>
    <string name="logInGoogle">Log in with Google</string>
    <string name="season">Season</string>
    <string name="sign_up_google">Sign up with Google</string>
    <string name="team">NBA Team</string>
    <string name="college">College</string>
</resources>