<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/floor_load_dark"
    android:weightSum="100">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="100">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivAvatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/doncic"
            app:civ_border_width="4dp"
            app:civ_fill_color="@color/colorPrimary"
            app:civ_border_color="@color/material_black"/>

        <Button
            android:id="@+id/txtCambiaAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/seleccionar_avatar"
            android:textColor="@color/material_black"
            android:textSize="16dp"

            />

        <TextView
            android:paddingLeft="15dp"
            android:id="@+id/textView"
            android:textColor="@color/material_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduce_user_name"
            android:textStyle="bold"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtUserNameOptions"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:text="@string/name"
            android:textColor="@color/material_black" />

        <TextView
            android:paddingLeft="15dp"
            android:id="@+id/txtSeleccionaAvatar"
            android:textColor="@color/material_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_avatar"
            android:textStyle="bold"
            android:textSize="18sp" />
<!--        <Spinner-->
<!--            android:paddingLeft="15dp"-->

<!--            android:id="@+id/spinnerProfilePicture"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:spinnerMode="dialog"-->
<!--            />-->




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtCode"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/codigo"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:textColor="@color/material_black" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSetOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:text="@string/actualizar" />

        <LinearLayout
            android:id="@+id/lnprofilead"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-5187656956047852/9812852200" />
        </LinearLayout>


    </LinearLayout>






</LinearLayout>